0.3.0 [2009-0?-??]
 - Added script ufl2py, mainly for debugging purposes.
 - Crude implementation of estimate_max_quadrature_order.
 - Improved manual.
 - Some bugfixes.
0.2.0 [2009-04-07]
 - Initial release of UFL.
0.1.0 [...]
 - Unreleased development versions of UFL.